package alarms;
option java_package = "org.yamcs.protobuf";

import "yamcs.proto";
import "pvalue.proto";

message Alarm {
   optional uint32 id = 1;
   optional pvalue.ParameterValue triggerValue = 2;
   optional pvalue.ParameterValue mostSevereValue = 3;
   optional pvalue.ParameterValue currentValue = 4;
   optional uint32 violations = 5;
}

message AlarmNotice {
   enum Type {
      SEVERITY_INCREASED = 1;
      UPDATED = 2;
      CLEARED = 3;
   }

   optional uint32 alarmId = 1;
   optional Type type = 2;
   optional pvalue.ParameterValue pval = 3;
   optional string username = 4;  // In case the alarm was cleared
}
